# portfolio_rest_api

./: CHANGELOG.md  Makefile  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: flake8.yml  github_release.yml  pylint.yml  ruff.yml  unit_tests.yml
portfolio_rest_api/: main.py  models.py
portfolio_rest_api/routers/: api.py  email.py
src/portfolio_rest_api/: __init__.py  config.py  logger.py  main.py  models.py
src/portfolio_rest_api/routers/: __init__.py  api.py  contact.py  email.py
src/portfolio_rest_api/templates/email/: email.html
tests/: test_default.py
