[build-system]
requires = ['poetry-core>=1.0.0', 'wheel',]
build-backend = 'poetry.core.masonry.api'


[tool.coverage.run]
branch = true
relative_files = true
omit = [
    '.tox/*',
    'tests/*',
]


[tool.flake8]
max-line-length = 120
extend-ignore = ''  # https://www.flake8rules.com/
max-complexity = 15  # Info: https://en.wikipedia.org/wiki/Cyclomatic_complexity
per-file-ignores = """\
# F401: Ignore "unused" imports
# F403: Ignore star imports
# F405: Ignore names from star imports
__init__.py:F401,F403,F405\
"""


[[tool.mypy.overrides]]
module = 'uvicorn.*'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'fastapi_mail.*'
ignore_missing_imports = true


[tool.poetry]
name = 'portfolio_rest_api'
version = '0.1.0'
description = "A template Poetry project structure."

authors = ["Lari Liuhamo <lari.liuhamo+pypi@gmail.com>",]
maintainers = ["Lari Liuhamo <lari.liuhamo+pypi@gmail.com>",]

include = ['CHANGELOG.md', 'LICENSE',]
license = 'MIT'
readme = 'README.md'

homepage = 'https://pypi.org/project/portfolio_rest_api/'
repository = 'https://github.com/Diapolo10/portfolio_rest_api'
documentation = 'https://github.com/Diapolo10/portfolio_rest_api/tree/main/docs'

keywords = [
    'python3',
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Typing :: Typed',
]


[tool.poetry.dependencies]
python = '^3.10'
fastapi = '^0.78.0'
fastapi-mail = '^1.0.9'
uvicorn = '^0.17.6'
python-dotenv = '^0.20.0'


[tool.poetry.dev-dependencies]
coverage = {version = '^6.4.1', extras = ['toml',]}
flake8 = '^4.0.1'
mypy = '^0.961'
pylint = '^2.14.1'
pyproject-flake8 = '^0.0.1a4'
pytest = '^7.1.2'
pytest-cov = '^3.0.0'
tox = '^3.25.0'
tox-gh-actions = '^2.9.1'


[tool.poetry.urls]
"Source code" = 'https://github.com/Diapolo10/portfolio_rest_api'
"Tracker" = 'https://github.com/Diapolo10/portfolio_rest_api/issues'
"Changelog" = 'https://github.com/Diapolo10/portfolio_rest_api/blob/main/CHANGELOG.md'


[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = [
    # https://vald-phoenix.github.io/pylint-errors/
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
--doctest-modules \
--cov=./ \
--cov-append \
--cov-report html:tests/reports/coverage-html \
--cov-report xml:tests/reports/coverage.xml \
--ignore=docs/
"""
testpaths = [
    'tests',
]


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310
isolated_build = True

[gh-actions]
python =
    3.10: py310

[gh-actions:env]
PLATFORM =
    ubuntu-latest: linux
    macos-latest: macos
    windows-latest: windows

[testenv]
passenv = GITHUB_*
deps =
    coverage
    coveralls[toml]
    pytest
    pytest-cov
commands =
    coverage run -m pytest
"""
